--- a/games/tictactoe/src/templates/app.html
+++ b/games/tictactoe/src/templates/app.html
@@ -1,19 +1,17 @@
 <style>{{ css }}</style>
-
-{% if current_player == player_id %}
+{% if current_player == player_id -%}
 <h3>It is your turn</h3>
-{% else %}
+{% else -%}
 <h3>Waiting on {{ current_player }} to move<h3>
-{% endif %}
-
+{% endif -%}
 <div class="board">
-   {% for row in range(end=3) %}
+   {% for row in range(end=3) -%}
       <div class="row">
-      {% for col in range(end=3) %}
-         {% set idx = col + row * 3 %}
-         {% set value = board[idx] %}
+      {% for col in range(end=3) -%}
+         {% set idx = col + row * 3 -%}
+         {% set value = board[idx] -%}
          <button phx-click="cell-clicked" phx-value-cell="{{ idx }}" class="cell">{{ value }}</button>
-      {% endfor %}
+      {% endfor -%}
       </div>
-   {% endfor %}
+   {% endfor -%}
 </div>
