--- a/games/tictactoe/src/templates/app.css
+++ b/games/tictactoe/src/templates/app.css
@@ -65,3 +65,12 @@
     height: 200px;
     font-size: 45px;
 }
+
+.winner-false {
+
+}
+
+.winner-true {
+    border: solid;
+    border-color: greenyellow;
+}
