use bs-5 actually

--- a/lib/game_box_web/templates/layout/root.html.heex
+++ b/lib/game_box_web/templates/layout/root.html.heex
@@ -12,20 +12,24 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
   </head>
   <body>
-    <nav class="navbar navbar-dark navbar-expand-lg bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
       <a class="navbar-brand" href="#">GameBox</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home</a>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/home">Home</a>
           </li>
-          <li class="nav-item-active"><.link class="nav-link" href={~p"/dashboard/home"}>Live Dashboard</.link></li>
+          <li class="nav-item">
+          <.link class="nav-link" href={~p"/dashboard/home"}>Live Dashboard</.link>
+          </li>
         </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
     <%= @inner_content %>
   </body>
 </html>
