--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,36 +1,24 @@
 @import "../node_modules/bootstrap/scss/bootstrap";
 
+/* LiveView specific classes for your customizations */
+.phx-no-feedback.invalid-feedback,
+.phx-no-feedback .invalid-feedback {
+  display: none;
+}
 
-/* Alerts and form errors used by phx.new */
-.alert {
-    padding: 15px;
-    margin-bottom: 20px;
-    border: 1px solid transparent;
-    border-radius: 4px;
-  }
-  .alert-info {
-    color: #31708f;
-    background-color: #d9edf7;
-    border-color: #bce8f1;
-  }
-  .alert-warning {
-    color: #8a6d3b;
-    background-color: #fcf8e3;
-    border-color: #faebcc;
-  }
-  .alert-danger {
-    color: #a94442;
-    background-color: #f2dede;
-    border-color: #ebccd1;
-  }
-  .alert p {
-    margin-bottom: 0;
-  }
-  .alert:empty {
-    display: none;
-  }
-  .invalid-feedback {
-    color: #a94442;
-    display: block;
-    margin: -1rem 0 2rem;
-  }
+.phx-click-loading {
+  opacity: 0.5;
+  transition: opacity 1s ease-out;
+}
+
+.phx-disconnected {
+  cursor: wait;
+}
+
+.phx-disconnected * {
+  pointer-events: none;
+}
+
+.alert:empty {
+  display: none;
+}
