--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,4 +1,6 @@
-@import "../node_modules/bootstrap/scss/bootstrap";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* LiveView specific classes for your customizations */
 .phx-no-feedback.invalid-feedback,
