--- a/lib/game_box_web/templates/layout/live.html.heex
+++ b/lib/game_box_web/templates/layout/live.html.heex
@@ -1,9 +1,9 @@
-<main class="container">
-  <p class="alert alert-info" role="alert"
+<main>
+  <p role="alert"
     phx-click="lv:clear-flash"
     phx-value-key="info"><%= live_flash(@flash, :info) %></p>
 
-  <p class="alert alert-danger" role="alert"
+  <p role="alert"
     phx-click="lv:clear-flash"
     phx-value-key="error"><%= live_flash(@flash, :error) %></p>
 
