Target text input fields and set default color to dark

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -60,6 +60,9 @@
 }
 
 
+[type='text'] { 
+  color: #170124;
+}
 
 /* LiveView specific classes for your customizations */
 .phx-no-feedback.invalid-feedback,
