--- a/lib/game_box_web/templates/layout/root.html.heex
+++ b/lib/game_box_web/templates/layout/root.html.heex
@@ -12,7 +12,7 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
   </head>
   <body class="bg-dark text-white p-10">
-  <nav>
+  <nav class="mb-10">
     <div>
       <a href="/">GameBox</a>
         <ul>
