--- a/lib/game_box_web/live/styleguide/typography.html.heex
+++ b/lib/game_box_web/live/styleguide/typography.html.heex
@@ -1,3 +1,117 @@
-<.h1>Heading 1</.h1>
-<.h2>Heading 2</.h2>
-<.h3>Heading 3</.h3>
+<div class="flex flex-col gap-y-12">
+  <div>
+    <.h2>Headings</.h2>
+  </div>
+
+  <div>
+    <.h1 label="H1 Heading" />
+    <.h2 label="H2 Heading" />
+    <.h3 label="H3 Heading" />
+    <.h4 label="H4 Heading" />
+    <.h5 label="H5 Heading" />
+  </div>
+  <div>
+    <% heading_attributes = """
+    attr(:class, :string, default: "", doc: "CSS class")
+    attr(:label, :string, default: nil, doc: "label your heading")
+    attr(:no_margin, :boolean, default: nil, doc: "removes margin from headings")
+    attr(:underline, :boolean, default: false, doc: "underlines a heading")
+    attr(:color_class, :string, default: nil, doc: "adds a color class")
+    attr(:rest, :global)
+    slot(:inner_block, required: false)
+    """ %>
+
+    <.h5 label="Attributes/Slots:" />
+    <.code content={heading_attributes} />
+  </div>
+  <div>
+    <% heading_content = """
+    <.h1 label="Heading 1" />
+    <.h1 no_margin underline color_class="text-primary" anything_else="gets passed along">Heading 1</.h1>
+    """ %>
+
+    <.h5 label="Code Example" />
+    <.code content={heading_content} />
+  </div>
+
+  <div class="border-b border-1 border-zinc-600 mb-5"></div>
+  <div>
+    <.h2>Paragraphs</.h2>
+    <.p>The quick brown fox jumps over the lazy dog.</.p>
+    <% p_attr = """
+    attr(:class, :string, default: "", doc: "CSS class")
+    attr(:rest, :global)
+    slot(:inner_block, required: false)
+    """ %>
+  </div>
+  <div>
+    <.h5 label="Attributes/Slots" />
+    <.code content={p_attr} />
+  </div>
+  <div>
+    <% p_content = """
+    <.p>Text here</.p>
+    <.p class="your_class">Text here</.p>
+    """ %>
+    <.h5 label="Code Example" />
+    <.code content={p_content} />
+  </div>
+  <div class="border-b border-1 border-zinc-600 mb-5"></div>
+  <div>
+    <.h2>Ordered Lists</.h2>
+    <.ol>
+      <li>List Element</li>
+      <li>List Element</li>
+      <li>List Element</li>
+    </.ol>
+  </div>
+  <div>
+    <% ol_attr = """
+    attr(:class, :string, default: "", doc: "CSS class")
+    attr(:rest, :global)
+    slot(:inner_block, required: false)
+    """ %>
+    <.h5 label="Attributes/Slots" />
+    <.code content={ol_attr} />
+  </div>
+  <div>
+    <% ol_content = """
+    <.ol>
+        <li>List Element</li>
+        <li>List Element</li>
+        <li>List Element</li>
+    </.ol>
+    """ %>
+    <.h5 label="Code Example" />
+    <.code content={ol_content} />
+  </div>
+  <div class="border-b border-1 border-zinc-600 mb-5"></div>
+  <div>
+    <.h2>Unordered Lists</.h2>
+    <.ul>
+      <li>List Element</li>
+      <li>List Element</li>
+      <li>List Element</li>
+    </.ul>
+  </div>
+  <div>
+    <% ul_attr = """
+    attr(:class, :string, default: "", doc: "CSS class")
+    attr(:rest, :global)
+    slot(:inner_block, required: false)
+    """ %>
+    <.h5 label="Attributes/Slots" />
+    <.code content={ul_attr} />
+  </div>
+  <div>
+    <% ul_content = """
+    <.ul>
+        <li>List Element</li>
+        <li>List Element</li>
+        <li>List Element</li>
+    </ul>
+    """ %>
+    <.h5 label="Code Example" />
+    <.code content={ul_content} />
+  </div>
+</div>
