--- a/lib/game_box_web/templates/layout/live.html.heex
+++ b/lib/game_box_web/templates/layout/live.html.heex
@@ -1,15 +1,11 @@
 <main>
-  <p role="alert"
-    phx-click="lv:clear-flash"
-    phx-value-key="info"
-    class="text-sky-500"
-    ><%= live_flash(@flash, :info) %></p>
+  <p role="alert" phx-click="lv:clear-flash" phx-value-key="info" class="text-sky-500">
+    <%= live_flash(@flash, :info) %>
+  </p>
 
-  <p role="alert"
-    phx-click="lv:clear-flash"
-    phx-value-key="error"
-    class="text-red-600"
-    ><%= live_flash(@flash, :error) %></p>
+  <p role="alert" phx-click="lv:clear-flash" phx-value-key="error" class="text-red-600">
+    <%= live_flash(@flash, :error) %>
+  </p>
 
   <%= @inner_content %>
 </main>
