--- a/lib/game_box_web/templates/layout/root.html.heex
+++ b/lib/game_box_web/templates/layout/root.html.heex
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="csrf-token" content={csrf_token_value()}>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="csrf-token" content={csrf_token_value()} />
     <.live_title>
       <%= assigns[:page_title] || "Game Box" %>
     </.live_title>
-    <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"}/>
-    <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
+    <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
+    <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
+    </script>
   </head>
   <body class="bg-dark text-white p-10">
   <nav class="mb-10">
@@ -17,31 +18,27 @@
       <a href="/">GameBox</a>
         <ul>
           <li>
-            <.link
-
-              href={Routes.live_path(GameBoxWeb.Endpoint, GameBoxWeb.HomeLive)}
-            >
+            <.link href={Routes.live_path(GameBoxWeb.Endpoint, GameBoxWeb.HomeLive)}>
               Home
             </.link>
           </li>
           <%= if assigns[:current_user] do %>
-          <li>
-            <.link
-
-              href={Routes.live_path(GameBoxWeb.Endpoint, GameBoxWeb.UploadLive)}
-            >
-              Upload Game
-            </.link>
-          </li>
-          <li>
-            <.link href={Routes.auth_path(@conn, :delete)}>Sign Out</.link>
-          </li>
+            <li>
+              <.link href={Routes.live_path(GameBoxWeb.Endpoint, GameBoxWeb.UploadLive)}>
+                Upload Game
+              </.link>
+            </li>
+            <li>
+              <.link href={Routes.auth_path(@conn, :delete)}>Sign Out</.link>
+            </li>
           <% else %>
-            <li><.link href={Routes.auth_path(@conn, :request, :github)}>Sign in with Github</.link></li>
+            <li>
+              <.link href={Routes.auth_path(@conn, :request, :github)}>Sign in with Github</.link>
+            </li>
           <% end %>
         </ul>
-    </div>
-  </nav>
+      </div>
+    </nav>
     <%= @inner_content %>
   </body>
 </html>
