refactor: Heex template updates

--- a/lib/game_box_web/live/styleguide/typography.html.heex
+++ b/lib/game_box_web/live/styleguide/typography.html.heex
@@ -27,7 +27,7 @@
   <div>
     <% heading_content = """
     <.h1 label="Heading 1" />
-    <.h1 no_margin underline color_class="text-primary" anything_else="gets passed along">Heading 1</.h1>
+    <.h1 no_margin underline color_class="text-primary" class="other_classes" anything_else="gets passed along">Heading 1</.h1>
     """ %>
 
     <.h5 label="Code Example" />
