fix: mix format

--- a/lib/game_box_web/live/styleguide/buttons.html.heex
+++ b/lib/game_box_web/live/styleguide/buttons.html.heex
@@ -2,8 +2,8 @@
   <div>
     <.h2>Buttons</.h2>
     <div class="flex">
-      <.button color="primary" label="Button" class="mr-3" />
-      <.button color="primary" variant="outline" label="Button" />
+      <.button label="Button" class="mr-3" />
+      <.button variant="outline" label="Button" />
     </div>
   </div>
   <div>
