--- a/lib/game_box_web/templates/layout/root.html.heex
+++ b/lib/game_box_web/templates/layout/root.html.heex
@@ -14,25 +14,25 @@
   </head>
   <body class="bg-dark text-white p-10">
     <nav class="mb-10">
-      <div>
-        <a href="/">GameBox</a>
-        <ul>
-          <li>
+      <div class="flex row">
+        <a href="/" class="mr-6" >GameBox</a>
+        <ul class="grow flex justify-end">
+          <li class="mr-6">
             <.link href={Routes.live_path(GameBoxWeb.Endpoint, GameBoxWeb.HomeLive)}>
               Home
             </.link>
           </li>
           <%= if assigns[:current_user] do %>
-            <li>
+            <li class="mr-6">
               <.link href={Routes.live_path(GameBoxWeb.Endpoint, GameBoxWeb.UploadLive)}>
                 Upload Game
               </.link>
             </li>
-            <li>
+            <li class="mr-6">
               <.link href={Routes.auth_path(@conn, :delete)}>Sign Out</.link>
             </li>
           <% else %>
-            <li>
+            <li class="mr-6">
               <.link href={Routes.auth_path(@conn, :request, :github)}>Sign in with Github</.link>
             </li>
           <% end %>
