refactor: Changes typography to use dividers

--- a/lib/game_box_web/live/styleguide/typography.html.heex
+++ b/lib/game_box_web/live/styleguide/typography.html.heex
@@ -34,7 +34,7 @@
     <.code content={code} />
   </div>
 
-  <div class="border-b border-1 border-zinc-600 mb-5"></div>
+  <.divider />
   <div>
     <.h2>Paragraphs</.h2>
     <.p>The quick brown fox jumps over the lazy dog.</.p>
@@ -56,7 +56,7 @@
     <.h5 label="Code Example" />
     <.code content={code} />
   </div>
-  <div class="border-b border-1 border-zinc-600 mb-5"></div>
+  <.divider />
   <div>
     <.h2>Ordered Lists</.h2>
     <.ol>
@@ -85,7 +85,7 @@
     <.h5 label="Code Example" />
     <.code content={code} />
   </div>
-  <div class="border-b border-1 border-zinc-600 mb-5"></div>
+  <.divider />
   <div>
     <.h2>Unordered Lists</.h2>
     <.ul>
