--- a/lib/game_box_web/live/styleguide/colors.html.heex
+++ b/lib/game_box_web/live/styleguide/colors.html.heex
@@ -1,19 +1,22 @@
 <div class="flex flex-col gap-y-12">
   <div>
     <.h2>Colors</.h2>
-    <.p>
-      Custom colors can be used in conjunction with any other TailwindCSS prefix that utilizes color.
-    </.p>
+    <div class="max-w-2xl">
+      <.p>
+        Custom colors can be used in conjunction with any other TailwindCSS prefix that utilizes color.
+      </.p>
+    </div>
     <% code = """
     <div class="bg-primary"></div> 
     <span class="text-primary"></span>
     <div class="border border-primary"></div> 
     """ %>
     <.code content={code} />
-
-    <.p class="mt-10">
-      The nested keys can be combined with the parent key to form class names like bg-primary-dark.
-    </.p>
+    <div class="max-w-2xl">
+      <.p class="mt-10">
+        The nested keys can be combined with the parent key to form class names like bg-primary-dark.
+      </.p>
+    </div>
     <% code = """
     <div class="bg-primary-light"></div> 
     <span class="text-primary-dark"></span>
