--- a/lib/game_box_web/templates/layout/root.html.heex
+++ b/lib/game_box_web/templates/layout/root.html.heex
@@ -13,6 +13,7 @@
     </script>
   </head>
   <body class="bg-dark text-white p-10">
+    <div class="max-w-6xl mx-auto">
     <nav class="mb-10">
       <div>
         <a href="/">GameBox</a>
@@ -40,5 +41,6 @@
       </div>
     </nav>
     <%= @inner_content %>
+  </div>
   </body>
 </html>
