feat: Add container element to styleguide

--- a/lib/game_box_web/live/styleguide/containers.html.heex
+++ b/lib/game_box_web/live/styleguide/containers.html.heex
@@ -1,1 +1,18 @@
-<.h2>Content Containers</.h2> 
+<div class="flex flex-col gap-y-6">
+  <.h2>Content Containers</.h2>
+
+  <.h2>Container</.h2>
+  <.p>Utilities for setting the maximum width of an element.</.p>
+  <div class="flex flex-col gap-y-6">
+    <.container class="bg-primary text-white p-6" max_width="full">max_width="full"</.container>
+    <.container class="bg-primary text-white p-6" max_width="5xl">max_width="5xl"</.container>
+    <.container class="bg-primary text-white p-6" max_width="4xl">max_width="4xl"</.container>
+    <.container class="bg-primary text-white p-6" max_width="3xl">max_width="3xl"</.container>
+    <.container class="bg-primary text-white p-6" max_width="2xl">max_width="2xl"</.container>
+    <.container class="bg-primary text-white p-6" max_width="xl">max_width="xl"</.container>
+    <.container class="bg-primary text-white p-6" max_width="lg">max_width="lg"</.container>
+    <.container class="bg-primary text-white p-6" max_width="md">max_width="md"</.container>
+    <.container class="bg-primary text-white p-6" max_width="sm">max_width="sm"</.container>
+    <.container class="bg-primary text-white p-6" max_width="xs">max_width="xs"</.container>
+  </div>
+</div>
