--- a/lib/game_box_web/live/styleguide/containers.html.heex
+++ b/lib/game_box_web/live/styleguide/containers.html.heex
@@ -54,7 +54,11 @@
     <div class="grid grid-cols-3 gap-x-12 mb-12">
       <.card>
         <.card_media src="/images/tictactoe.png" />
-        <.card_content author="@bhelx" author_link="https://github.com/bhelx" heading="Tic Tac Toe">
+        <.card_content
+          author="@bhelx"
+          author_link="https://github.com/bhelx"
+          heading="Tic Tac Toe"
+        >
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget leo interdum, feugiat ligula eu, facilisis massa. Nunc sollicitudin massa a elit laoreet.
         </.card_content>
         <.card_footer>
@@ -65,7 +69,11 @@
 
       <.card>
         <.card_media src="/images/tictactoe.png" />
-        <.card_content author="@bhelx" author_link="https://github.com/bhelx" heading="Tic Tac Toe">
+        <.card_content
+          author="@bhelx"
+          author_link="https://github.com/bhelx"
+          heading="Tic Tac Toe"
+        >
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget leo interdum, feugiat ligula eu, facilisis massa. Nunc sollicitudin massa a elit laoreet.
         </.card_content>
         <.card_footer>
@@ -76,7 +84,11 @@
 
       <.card>
         <.card_media src="/images/tictactoe.png" />
-        <.card_content author="@bhelx" author_link="https://github.com/bhelx" heading="Tic Tac Toe">
+        <.card_content
+          author="@bhelx"
+          author_link="https://github.com/bhelx"
+          heading="Tic Tac Toe"
+        >
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget leo interdum, feugiat ligula eu, facilisis massa. Nunc sollicitudin massa a elit laoreet.
         </.card_content>
         <.card_footer>
