--- a/lib/game_box_web/templates/layout/root.html.heex
+++ b/lib/game_box_web/templates/layout/root.html.heex
@@ -14,33 +14,11 @@
   </head>
   <body class="bg-dark bg-honeycomb-pattern bg-repeat-x bg-[length:100rem]">
     <div class="min-h-screen max-w-full bg-fixed bg-50% bg-gradient-to-t from-dark">
-      <div class="max-w-6xl mx-auto text-white">
+      <div class="max-w-6xl mx-auto text-white p-10 lg:p-0">
         <nav class="my-10">
           <div class="flex row">
-            <a href="/">GameBox</a>
-            <ul class="grow flex justify-end">
-              <li class="mr-4">
-                <.link href={Routes.live_path(GameBoxWeb.Endpoint, GameBoxWeb.HomeLive)}>
-                  Home
-                </.link>
-              </li>
-              <%= if assigns[:current_user] do %>
-                <li class="mr-4">
-                  <.link href={Routes.live_path(GameBoxWeb.Endpoint, GameBoxWeb.UploadLive)}>
-                    Upload Game
-                  </.link>
-                </li>
-                <li>
-                  <.link href={Routes.auth_path(@conn, :delete)}>Sign Out</.link>
-                </li>
-              <% else %>
-                <li>
-                  <.link href={Routes.auth_path(@conn, :request, :github)}>
-                    Sign in with Github
-                  </.link>
-                </li>
-              <% end %>
-            </ul>
+            <a href="/"><img src="/images/Gamebox-White.png" class="w-64" /></a>
+            <.navigation current_user={assigns[:current_user]} />
           </div>
         </nav>
         <%= @inner_content %>
