fix: Github Actions warnings

--- a/lib/game_box_web/live/styleguide/containers.html.heex
+++ b/lib/game_box_web/live/styleguide/containers.html.heex
@@ -62,8 +62,8 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget leo interdum, feugiat ligula eu, facilisis massa. Nunc sollicitudin massa a elit laoreet.
         </.card_content>
         <.card_footer>
-          <.button to="/" label="Join Now" class="w-full" />
-          <.button to="/" label="Start" variant="outline" class="w-full" />
+          <.button label="Join Now" class="w-full" />
+          <.button label="Start" variant="outline" class="w-full" />
         </.card_footer>
       </.card>
 
@@ -77,8 +77,8 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget leo interdum, feugiat ligula eu, facilisis massa. Nunc sollicitudin massa a elit laoreet.
         </.card_content>
         <.card_footer>
-          <.button to="/" label="Join Now" class="w-full" />
-          <.button to="/" label="Start" variant="outline" class="w-full" />
+          <.button label="Join Now" class="w-full" />
+          <.button label="Start" variant="outline" class="w-full" />
         </.card_footer>
       </.card>
 
@@ -92,8 +92,8 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget leo interdum, feugiat ligula eu, facilisis massa. Nunc sollicitudin massa a elit laoreet.
         </.card_content>
         <.card_footer>
-          <.button to="/" label="Join Now" class="w-full" />
-          <.button to="/" label="Start" variant="outline" class="w-full" />
+          <.button label="Join Now" class="w-full" />
+          <.button label="Start" variant="outline" class="w-full" />
         </.card_footer>
       </.card>
     </div>
