refactor: move where navigation lives

--- a/lib/game_box_web/templates/layout/app.html.heex
+++ b/lib/game_box_web/templates/layout/app.html.heex
@@ -1,5 +1,6 @@
 <main class="container">
   <p role="alert" class="text-sky-500"><%= Phoenix.Flash.get(@conn, :info) %></p>
   <p role="alert" class="text-red-500"><%= Phoenix.Flash.get(@conn, :error) %></p>
+HEY GIRL
   <%= @inner_content %>
 </main>
