--- a/lib/game_box_web/templates/layout/root.html.heex
+++ b/lib/game_box_web/templates/layout/root.html.heex
@@ -24,7 +24,7 @@
   </head>
   <body class="bg-dark bg-honeycomb-pattern bg-repeat-x bg-[length:100rem] text-white">
   
-    <div class="text-center min-h-screen max-w-full bg-fixed bg-50% bg-gradient-to-t from-dark">
+    <div class="min-h-screen max-w-full bg-fixed bg-50% bg-gradient-to-t from-dark">
       
       <div class="w-full max-w-6xl mx-auto text-white p-10 lg:p-6">
         
