fix: Fixes all but 1 test

--- a/lib/game_box_web/templates/layout/root.html.heex
+++ b/lib/game_box_web/templates/layout/root.html.heex
@@ -31,10 +31,10 @@
         <%= @inner_content %>
       </div>
       <div class="mt-24 justify-end flex w-full bg-[url('/images/play_create_repeat.png')] min-h-[6rem] bg-repeat-x bg-center">
-        <img src="images/diamond.png" class="w-32 h-32 mr-24 mt-32" />
+        <img src="/images/diamond.png" class="w-32 h-32 mr-24 mt-32" />
       </div>
       <div class="w-full flex justify-center my-24">
-        <img src="images/Gamebox-White.png" class="w-60"/>
+        <img src="/images/Gamebox-White.png" class="w-60"/>
       </div>
     </div>
  
